# tinydng

./: CMakeLists.txt  tinydng.pc.in  tinydngConfig.cmake.in
